--- a/package.json
+++ b/package.json
@@ -48,9 +48,14 @@
 		"@tweakpane/core": "^2.0.3",
 		"crayon.js": "^3.3.3",
 		"html2pdf.js": "^0.10.1",
+		"isomorphic-fetch": "^3.0.0",
 		"lamy-debugbar": "^0.3.1",
+		"modern-rembg": "^0.0.2",
+		"onnxruntime-web": "^1.16.3",
 		"photoswipe": "^5.4.3",
+		"pyodide": "^0.25.0",
 		"three": "^0.161.0",
+		"transparent-background": "^1.5.0",
 		"tweakpane": "^4.0.3"
 	}
 }
