[Feature] Blurhash component

--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
 		"@threlte/core": "^7.1.2",
 		"@threlte/extras": "^8.8.1",
 		"@tweakpane/core": "^2.0.3",
+		"blurhash": "^2.0.5",
 		"crayon.js": "^3.3.3",
+		"fast-blurhash": "^1.1.2",
 		"html2pdf.js": "^0.10.1",
 		"isomorphic-fetch": "^3.0.0",
 		"lamy-debugbar": "^0.3.1",
